// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders AccountMenuItems when the user is signed in 1`] = `
<aside>
  <div
    onSignOut={[MockFunction]}
  >
    AccountMenuItems
  </div>
</aside>
`;

exports[`it renders SignIn component when the view is SIGNIN 1`] = `
<aside>
  <div
    classes={
      Object {
        "modal_active": undefined,
      }
    }
    setDefaultUsername={[MockFunction]}
    showCreateAccount={[MockFunction]}
    showForgotPassword={[MockFunction]}
  >
     
    SignInComponent
  </div>
</aside>
`;

exports[`it renders create account component when the view is CREATE_ACCOUNT 1`] = `
<aside>
  <div
    classes={
      Object {
        "root": undefined,
      }
    }
    initialValues={
      Object {
        "email": "gooseton",
      }
    }
    isCancelButtonHidden={false}
  >
     
    CreateAccountComponent
  </div>
</aside>
`;

exports[`it renders empty aside element when accountMenuIsOpen is false 1`] = `<aside />`;

exports[`it renders forgot password component when the view is FORGOT_PASSWORD 1`] = `
<aside>
  <div
    initialValues={
      Object {
        "email": "gooseton",
      }
    }
  >
     
    ForgotPasswordComponent
  </div>
</aside>
`;
